objects/LLC_BI__Spread_Statement_Group_Total__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Period_Out_Of_Range__c</fullName>
        <formula>IF(
  OR(
    OR(
      LLC_BI__Year__c &gt; Year(LLC_BI__Spread_Statement_Record_Total__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c),
      AND(LLC_BI__Year__c = Year(LLC_BI__Spread_Statement_Record_Total__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c), 
	OR(
	  AND(LLC_BI__Quarter__c != 0, LLC_BI__Quarter__c &gt; LLC_BI__Spread_Statement_Record_Total__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date_Quarter__c)
	)
      )
    ),
    OR(
      LLC_BI__Year__c &lt; Year(LLC_BI__Spread_Statement_Record_Total__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c),
      AND(LLC_BI__Year__c = Year(LLC_BI__Spread_Statement_Record_Total__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c), 
	OR(
	  AND(LLC_BI__Quarter__c != 0, LLC_BI__Quarter__c &lt; LLC_BI__Spread_Statement_Record_Total__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date_Quarter__c) 
	)
      )
    )
  ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Out Of Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Quarter__c</fullName>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record_Total__c</fullName>
        <label>Spread Statement Record Total</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
        <relationshipName>Spread_Statement_Group_Totals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Out_Range__c</fullName>
        <formula>IF(OR(LLC_BI__Year__c &gt; Year(LLC_BI__Spread_Statement_Record_Total__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c), LLC_BI__Year__c &lt; Year(LLC_BI__Spread_Statement_Record_Total__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Out Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>-D Spread Statement Group Total</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Group Total Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Spread Statement Group Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>